src/test/resources/de/uni_luebeck/isp/tessla/interpreter/tests/errors/warnings.warnings
/errors/warnings.tessla(1,1 - 1,7): The keyword 'define' is deprecated, use 'def' instead.